<resources>
    <string name="app_name">MaterialCalendar</string>

    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    
    <string name="date_format">yyyy년 MMM</string>
</resources>
